# VG-24H

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CONTEXT.md  FLOW.md  LICENSE  PlanoDeTrabalho_PortalVG_v5.md  README.md  Workflow Orchestration.md  cadastro.html  dashboard.py  index.html  login.html  requirements.txt  rewrite.sh  rewrite_even.sh  rewrite_even_messages.sh  rewrite_exact.sh  start.ps1  start.py  styles.css
.git_backup2/: index  (+5 more)
backend/: .env.example  check_users.py  db_users_out.txt  error_log.txt  get_users.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  update_passwords.py
backend/GOV/: Breadcrumb.md  UX_Writing.md
backend/config/: asgi.py  pyvenv.cfg  settings.py  urls.py  wsgi.py
backend/portal/: admin.py  apps.py  context_processors.py  db.py  decorators.py  forms.py  middleware.py  models.py  tests.py  types.py  urls.py  utils.py  views_auth.py  views_cidadao.py  views_equipe.py  views_gestao.py  views_root.py
backend/portal/db/: __init__.py  _shared.py  catalogo.py  chamado.py  cidadao.py  config.py  foto.py  historico.py  notificacao.py  pagination.py  senha.py  servidor.py  stats.py
backend/portal/migrations/: 0001_initial.py  0002_seed_protocolo_seq.py
backend/portal/services/: chamado.py
backend/portal/templatetags/: vg_tags.py
backend/portal/tests/: test_db_integration.py  test_db_senha.py  test_forms.py  test_protocolo.py  test_pure.py  test_rate_limit.py  test_trocar_senha_view.py  test_views.py
backend/static/portal/: govbr-layout.css  (+1 more)
backend/templates/: 403.html  404.html  500.html
(+218 files in other folders)
